kubernetes/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  spec:
    selector:
      role: app
    ports:
      - protocol: TCP
        port: 80
        targetPort: 8080
        nodePort: 32001
    type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  labels:
    role: app
spec:
  replicas: 2
  selector:
    matchLabels:
      role: app
  template:
    metadata:
      labels:
        role: app
    spec:
      containers:
        - name: app
          image: "just-a-coder/dockerkubernetesapp"
          resources:
            requests:
              cpu: 10m
